<resources>
    <!--    registration-->
    <string name="registration_title">Registration</string>
    <string name="registration_user_name">User Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Password</string>
    <string name="registration_register">Register</string>
    <string name="registration_login"><u>Login</u></string>
    <string name="registration_invalid_name">Username must be longer than 2 and less than 20.</string>
    <string name="registration_invalid_empty_email">Email must not empty</string>
    <string name="registration_invalid_email">Email address is incorrect.</string>
    <string name="registration_invalid_password">Password must be greater than 7 and less than 20 in length.</string>
    <string name="registration_email_address_registered">Email address is already registered</string>

    <!--    login-->
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register"><u>Register</u></string>
    <string name="login_invalid_email_or_mail">Invalid email or password</string>
</resources>